added logo and update_node_status api

--- a/db/bayes_app/templates/dfl/config.html
+++ b/db/bayes_app/templates/dfl/config.html
@@ -17,8 +17,11 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="http://127.0.0.1:8000/">
-          <!-- Your Title/Logo Image or Text -->
-          Bayes Admin
+          <img
+            src="https://bayesian.global/wp-content/uploads/2023/08/cropped-%E8%B4%9D%E5%8F%B6%E6%96%AFlogo.png"
+            alt="Logo"
+          />
+          <span>Admin</span>
         </a>
         <button
           class="navbar-toggler"
