--- a/db/bayes_app/templates/dfl/index.html
+++ b/db/bayes_app/templates/dfl/index.html
@@ -157,9 +157,8 @@
         </div>
         <!-- Display global_model_hash with a customized background -->
       <div class="mt-3 p-3" style="background-color: #2c3e50; color: #ecf0f1; border-radius: 10px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-        <h5 class="font-weight-bold">Global Model Hash: <span id="globalModelHash" class="lead"></span></h5>
+        <h5 class="font-weight-bold">Global Model Hash: <span id="globalModelHashAdmin" class="lead"></span></h5>
       </div>
-
         <div class="container mt-4">
           <div class="d-flex align-items-end">
             <div class="mr-2">
@@ -311,7 +310,7 @@
 
   // Polling function to fetch logs every 5 seconds
 function startLogPolling() {
-  setInterval(fetchLogs, 2000); // Adjust the interval as needed (e.g., 5000 milliseconds = 5 seconds)
+  setInterval(fetchLogs, 5000); // Adjust the interval as needed (e.g., 5000 milliseconds = 5 seconds)
 }
 
 // Start polling when the page is loaded
@@ -336,12 +335,36 @@ async function fetchGlobalModelHash() {
 
 // Polling function to fetch global model hash every 5 seconds
 function startGlobalModelHashPolling() {
-  setInterval(fetchGlobalModelHash, 1000); // Adjust the interval as needed (e.g., 5000 milliseconds = 5 seconds)
+  setInterval(fetchGlobalModelHash, 2000); // Adjust the interval as needed (e.g., 5000 milliseconds = 5 seconds)
 }
 
 // Start polling when the page is loaded
 window.addEventListener('load', startGlobalModelHashPolling);
 
+async function fetchGlobalModelHashAdmin() {
+  try {
+    const response = await fetch('http://127.0.0.1:8000/api/v1/get_global_model_hash/');
+    const data = await response.json();
+
+    const globalModelHashElement = document.getElementById('globalModelHashAdmin');
+
+    if (data.global_model_hash) {
+      globalModelHashElement.textContent = data.global_model_hash;
+    } else {
+      globalModelHashElement.textContent = 'No Global Model Hash available.';
+    }
+  } catch (error) {
+    console.error('Error fetching global model hash:', error);
+  }
+}
+
+// Polling function to fetch global model hash every 5 seconds
+function startGlobalModelHashPollingAdmin() {
+  setInterval(fetchGlobalModelHashAdmin, 2000); // Adjust the interval as needed (e.g., 5000 milliseconds = 5 seconds)
+}
+
+// Start polling when the page is loaded
+window.addEventListener('load', startGlobalModelHashPollingAdmin);
   
   
   
